# gravitySim

./: CMakeLists.txt
libs/glad/include/glad/: glad.h
src/: CMakeLists.txt  main.cpp  my_funcs.cpp  my_funcs.hpp
